<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_smile"
            android:title="@string/action_smile"
            android:icon="@drawable/ic_menu_smile"
            app:showAsAction="always"/>

    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:icon="@drawable/ic_refresh"
          app:showAsAction="always"/>

    <item android:id="@+id/action_reorder"
          android:title="@string/action_reorder"
          app:showAsAction="never"/>

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          app:showAsAction="never"/>

    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        app:showAsAction="never"/>

    <item android:id="@+id/action_setting"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/action_manager"
            android:title="@string/action_manager"
            app:showAsAction="never"
            android:visible="false"/>
</menu>
